fix spacing and scrolling problem on main page and archives page

--- a/src/App.css
+++ b/src/App.css
@@ -273,12 +273,11 @@ button {
 }
 .board-tiles-ul {
   width: 100%;
-  height: 70%;
+  height: fit-content;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-content: flex-start;
-  overflow-y: auto;
 }
 .board-tile {
   height: 100px;
@@ -2773,14 +2772,14 @@ button {
 .boards-section {
   padding: 0 0 20px;
   margin: 0 auto;
-  height: 160px;
+  min-height: 150px;
+  height: fit-content;
   max-width: 1250px;
 }
 .board-tiles-section-header {
   margin: 0 0 0 40px;
   position: relative;
   display: flex;
-  width: 100%;
 }
 .boards-listed-tiles {
   display: flex;
@@ -2811,6 +2810,7 @@ button {
   height: fit-content;
   min-width: 600px;
   max-width: 75%;
+  margin: 20px 0 0 4px;
 }
 .archives-list-item {
   margin: 2.5px 2px;
